--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,16 @@ android {
 
     defaultConfig {
         applicationId "com.maiya.leetcode"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -40,6 +44,14 @@ dependencies {
 
     // permission
     implementation 'com.yanzhenjie:permission:2.0.0-rc4'
+
+    implementation 'com.shuyu:gsyVideoPlayer-java:7.1.3'
+
+//是否需要ExoPlayer模式
+    implementation 'com.shuyu:GSYVideoPlayer-exo2:7.1.3'
+//根据你的需求ijk模式的so
+    implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.1.3'
+    implementation 'com.shuyu:gsyVideoPlayer-arm64:7.1.3'
 }
 repositories {
     mavenCentral()
