1。华为手机 替换原生电话尝试 （无果 InCallService 无效 / aidl 反射无效）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            aidl {
+                srcDirs 'src/main/aidl', 'src/main/aidl/2', 'src/main/aidl/com/android/internal/telephony/', 'src/main/aidl/com/android/internal/telephony'
+            }
+        }
+    }
 
 }
 
