--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 //根据你的需求ijk模式的so
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.1.3'
     implementation 'com.shuyu:gsyVideoPlayer-arm64:7.1.3'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 repositories {
     mavenCentral()
