--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,24 +41,15 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation project(':ijkplay')
+    api project(':ijkplay')
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // permission
     implementation 'com.yanzhenjie:permission:2.0.0-rc4'
-
-    implementation 'com.shuyu:gsyVideoPlayer-java:7.1.3'
-
-//是否需要ExoPlayer模式
-    implementation 'com.shuyu:GSYVideoPlayer-exo2:7.1.3'
-//根据你的需求ijk模式的so
-    implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.1.3'
-    implementation 'com.shuyu:gsyVideoPlayer-arm64:7.1.3'
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -69,6 +60,7 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:geocoder:2.99'
     implementation 'com.googlecode.libphonenumber:prefixmapper:2.109'
 }
+
 repositories {
     mavenCentral()
 }
