--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
     <uses-permission android:name="android.permission.BROADCAST_PACKAGE_REPLACED" />
     <uses-permission android:name="android.permission.RESTART_PACKAGES" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
+    <!--android 9.0上使用前台服务，需要添加权限-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
 
     <application
@@ -58,8 +59,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".view.SplashActivity" />
+        <activity android:name=".view.MainActivity" />
 
         <!-- 电话service -->
         <service
