[superCall] 维护部分bug ，application 待优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:carrier:1.99'
     implementation 'com.googlecode.libphonenumber:geocoder:2.99'
     implementation 'com.googlecode.libphonenumber:prefixmapper:2.109'
+    testImplementation 'org.testng:testng:6.9.6'
 }
 
 repositories {
