--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     // permission
     implementation 'com.yanzhenjie:permission:2.0.0-rc4'
 
@@ -61,6 +60,7 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:prefixmapper:2.109'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'org.testng:testng:6.9.6'
 }
 
