--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         </activity>
         <activity android:name="com.maiya.call.view.SplashActivity" />
         <activity android:name="com.maiya.call.view.MainActivity" />
+        <activity android:name=".phone.view.phonecall.PhoneCallActivity" />
 
         <!-- 电话service -->
         <service
