--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // permission
-    implementation 'com.yanzhenjie:permission:2.0.0-rc4'
+    implementation 'com.yanzhenjie:permission:2.0.3'
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
