--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 
 
     <application
-        android:name="com.maiya.call.MApplication"
+        android:name="com.maiya.call.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_home"
         android:label="@string/app_name"
